# opportunity-markets

./: .gitignore  Anchor.toml  Arcium.toml  README.md  skills-lock.json  test.sh  vulnhunter-audit.md
.github/workflows/: ci.yml
docs/: README.md
docs/security/: README.md
encrypted-ixs/src/: lib.rs
js/: package.json
js/src/: index.ts  signing.ts
js/src/accounts/: allowedMint.ts  feeVault.ts  index.ts  opportunityMarket.ts  platformConfig.ts
js/src/instructions/: index.ts  (+29 more)
programs/opportunity_market/: Cargo.toml
programs/opportunity_market/src/: constants.rs  error.rs  events.rs  lib.rs  score.rs  state.rs
programs/opportunity_market/src/instructions/: add_market_option.rs  add_reward.rs  cancel_fee_claim_authority_change.rs  cancel_update_authority_change.rs  claim_creator_fees.rs  claim_fees.rs  close_option_account.rs  close_stake_account.rs  close_stuck_stake_account.rs  create_market.rs  do_unstake_early.rs  end_reveal_period.rs  finalize_new_fee_claim_authority.rs  finalize_new_update_authority.rs  finalize_reveal_stake.rs  increment_option_tally.rs  init_allowed_mint.rs  init_central_state.rs  init_comp_defs.rs  init_fee_vault.rs  init_platform_config.rs  init_stake_account.rs  init_token_vault.rs  mod.rs  open_market.rs  pause_market.rs  pause_staking.rs  propose_new_fee_claim_authority.rs  propose_new_update_authority.rs  reclaim_stake.rs  resolve_market.rs  resume_market.rs  resume_staking.rs  reveal_stake.rs  select_winning_options.rs  set_winning_option.rs  stake.rs  unstake.rs  unstake_early.rs  update_central_state.rs  (+3 more)
scripts/: add-option.ts  centralState.json  create-market.ts  ensure-central-state.ts  ensure-platform-config.ts  market.json  open-market.ts  platformConfig.json  stake.ts
tests/: market.test.ts
tests/utils/: environment.ts  platform.ts  sleep.ts  test-runner.ts  transaction.ts
(+1 files in other folders)
