[package]
name = "opportunity_market"
version = "0.1.0"
description = "Opportunity market with encrypted votes using Arcium"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "opportunity_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
production-settings = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "0.10.3" }
arcium-macros = "0.10.3"
arcium-anchor = "0.10.3"
anchor-spl = "1.0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[lints.clippy]
too_many_arguments = "allow"
diverging_sub_expression = "allow"
